<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/bt_go_back"
                android:src="@drawable/profileimg"
                android:layout_weight="1"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mysettings"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/name_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name_acct_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/username_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />


            <TextView
                android:id="@+id/username_acct_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/email_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />


            <TextView
                android:id="@+id/email_acct_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/age_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <TextView
                android:id="@+id/age_acct_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/description_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_description" />


            <TextView
                android:id="@+id/description_acct_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/occupation_acct_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_occupation" />


            <TextView
                android:id="@+id/occupation_acct_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/profile_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/textview_top10"/>

    </LinearLayout>

</ScrollView>